<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p2p_nav"
    app:startDestination="@id/nav_passive"
    >

    <fragment
        android:id="@+id/nav_passive"
        android:name="com.couchbase.android.listsync.ui.p2p.server.ServerFragment"
        android:label="@string/title_passive"
        tools:layout="@layout/fragment_server"
        />
    <fragment
        android:id="@+id/nav_active"
        android:name="com.couchbase.android.listsync.ui.p2p.client.ClientFragment"
        android:label="@string/title_active"
        tools:layout="@layout/fragment_client"
        >
        <argument
            android:name="uri"
            app:argType="java.net.URI"
            app:nullable="true"
            android:defaultValue="@null"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_nearby"
        android:name="com.couchbase.android.listsync.ui.p2p.nearby.NearbyFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_nearby"
        >
        <action
            android:id="@+id/action_nav_nearby_to_perms"
            app:destination="@id/nav_perms"
            />
        <action
            android:id="@+id/action_nav_nearby_to_active"
            app:destination="@id/nav_active"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_perms"
        android:name="com.couchbase.android.listsync.ui.p2p.nearby.PermissionsFragment"
        tools:layout="@layout/fragment_permissions"
        >
        <action
            android:id="@+id/action_nav_perms_to_nearby"
            app:destination="@id/nav_nearby"
            />
        <action
            android:id="@+id/action_nav_perms_to_active"
            app:destination="@id/nav_active"
            />
    </fragment>
</navigation>