<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/frame_margin"
    tools:context=".ui.p2p.server.ServerFragment"
    >

    <TextView
        android:id="@+id/hostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/portLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/host"
        android:layout_margin="@dimen/frame_margin"
        android:text="@string/host"
        style="@style/Text.Label"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/hostLabel"
        app:layout_constraintStart_toEndOf="@+id/hostLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text|textNoSuggestions"
        style="@style/Text"
        />

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hostLabel"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/port"
        android:layout_marginTop="@dimen/frame_margin"
        android:layout_marginLeft="@dimen/frame_margin"
        android:layout_marginRight="@dimen/frame_margin"
        android:layout_marginBottom="@dimen/textbox_pad"
        android:text="@string/port"
        style="@style/Text.Label"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/portLabel"
        app:layout_constraintStart_toEndOf="@+id/portLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        style="@style/Text"
        />

    <Button
        android:id="@+id/start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/host"
        app:layout_constraintBottom_toTopOf="@+id/clients"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/textbox_pad"
        android:text="@string/start_client"
        style="@style/ListSync.Button.Start"
        android:enabled="false"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/textbox_pad"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>