<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_yellow"
    tools:context="com.couchbase.android.listsync.LoginActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/usernameWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/login_logo"
        android:contentDescription="@string/contentTracker"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintVertical_bias="0.30"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textbox_pad"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@+id/passwordWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.80"
        android:background="@color/white"
        android:hint="@string/username"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:autofillHints=""
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textbox_pad"
        app:layout_constraintTop_toBottomOf="@+id/usernameWrapper"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:hint="@string/password"
        >

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordWrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.600"
        android:layout_marginTop="@dimen/textbox_pad"
        style="@style/ListSync.Button"
        android:text="@string/login"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
